# AbDev

./: .gitignore  AbDev.ipynb  AbDev.py  AbDev_trained.ipynb  DeepSP.ipynb  Prediction_Result.csv  README.md  SAPSCM.csv  pyproject.toml  train.py
Data/AS/: DeepSP_Feature.csv
Data/BVP/: DeepSP_Feature.csv
Data/CIC/: DeepSP_Feature.csv
Data/ELISA/: DeepSP_Feature.csv
Data/HIC/: DeepSP_Feature.csv
Data/SGAC/: DeepSP_Feature.csv
Data/SMAC/: DeepSP_Feature.csv
Trained_model/: BVP_KNN_model.joblib  CIC_KNN_model.joblib  HEK_KNN_model.joblib  HIC_SVR_model.joblib  PSR_SVR_model.joblib  SGAC_SVR_model.joblib  SMAC_KNN_model.joblib  Tm_KNN_model.joblib
data/ACSINS/: DeepSP_Feature.csv
data/CSI/: DeepSP_Feature.csv
data/HEK/: DeepSP_Feature.csv
data/PSR/: DeepSP_Feature.csv
data/Tm/: DeepSP_Feature.csv
data/example/: Prediction_Result.csv  SAPSCM.csv  Sequence_Info.csv  pnas_deepSAPpos.csv  pnas_deepSCMneg.csv  pnas_deepSCMpos.csv  seq_H.fasta  seq_L.fasta  seq_aligned_H.csv  seq_aligned_HL.txt  seq_aligned_KL.csv
models/Trained_model/: ACSINS_SVR_model.joblib  AS_LR_model.joblib  CSI_SVR_model.joblib  ELISA_KNN_model.joblib
notebooks/: AbDev.ipynb  AbDev_trained.ipynb  DeepSP.ipynb
src/: train.py
