[project]
authors = [{ name = "deepthought", email = "deepthough@postech.ac.kr" }]
dependencies = []
name = "AbDev"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
#abdev = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
anarci = ">=2024.5.21,<2025"
pandas = ">=2.3.1,<3"
plotly = ">=6.3.0,<7"
numpy = ">=2.3.2,<3"
scikit-learn = ">=1.7.1,<2"
joblib = ">=1.5.1,<2"
ipykernel = ">=6.30.1,<7"
tensorflow = ">=2.18.0,<3"
keras = ">=3.11.2,<4"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.10.5,<4"
